styles/index-desktop.css
body {
    height: 100%;
    overflow: auto;
    margin: 0;
    padding: 0;
    left: 0;
    top: 0;
}
 html {
    overflow: hidden;
    height: 100%;
 }

body, html {
    height: 100%;
}

.navbar {
    right: 0;
    z-index: 1000;
    background: transparent;
}

#bgVideo {
    /* position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%;  */
    filter: blur(5px);
    height: 100%;
}

#header-text {
    color: #ffc107;
    position: fixed;
    bottom: 50%;
    left: 39%;
}

.btn-outline-warning {
    position: absolute;
    top: 75%;
    left: 45%;
}

section #about {
    background: white;
    height:75%;
}

.about-img {
    height: 100px;
    width: 100px;
    border-radius: 50%;
}

.footer {
    background: black;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    padding-top: 1%;
}
 
p a{
    color: black
}

.bg-primary-color {
    background: white;
    color: black;
}

.section-heading {
    padding-top: 5%;
}

header {
    position: relative;
    top:0;
    bottom:0;
     
}

.text {
    position: absolute;
    right: 0;
    left: 0%;
    top: 25%;
    /* z-index: 1000; */
  }
  
 

